Make browser actions hidden by default to avoid flicker on data load

--- a/pootle/static/css/actions.css
+++ b/pootle/static/css/actions.css
@@ -45,11 +45,6 @@ body.translate #actions
     font-weight: bold;
 }
 
-body.js-not-loaded #translate-actions li
-{
-    display: none;
-}
-
 #translate-actions .counter
 {
     padding: 0.1em 0.9em;
